# DB_FPGA_with_RP2040

./: README.md
RP2040_Firmware/: CMakeLists.txt  hello_7segment.c  hello_7segment.uf2
